# xmem-example

./: CMakeLists.txt
include/: common.h
src/: main.c  stdio.c  xmem.c
